# app/Models/Schedule.php
@@ -34,6 +34,12 @@ class Schedule extends Model
 {
     use HasFactory;
 
+    protected $fillable = [
+        'master_id',
+        'date',
+        'time',
+        'status'
+    ];
     public function user()
     {
         return $this->belongsTo(User::class);
